--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ analytics:
 # Site Author
 author:
   name             : "Esteban M Fernandez"
-  avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  avatar           : "profile.jpg"
+  bio              : "Political Scientist ruining the things you enjoy"
+  location         : "Los Angeles, CA"
   employer         :
   pubmed           : 
   googlescholar    : 
