--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpg"
   bio              : "Political Scientist ruining the things you enjoy"
   location         : "Los Angeles, CA"
-  employer         : https://polisci.mit.edu/people/esteban-m-fernandez
+  employer         : "https://polisci.mit.edu/people/esteban-m-fernandez"
   pubmed           : 
   googlescholar    : 
   email            :
