--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         : "https://polisci.mit.edu/people/esteban-m-fernandez"
   pubmed           : 
   googlescholar    : 
-  email            :
+  email            : "estebanf@mit.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
